<resources>
    <string name="app_name">Retabelo</string>
    <string name="text_recommendations">Recipes</string>
    <string name="text_foods">Foods</string>
    <string name="text_favorites">Favorites</string>
    <string name="undo_string">Undo</string>
    <string name="undo_snackbar_food">removed</string>
    <string name="undo_snackbar_favorite">removed from favorites</string>
    <string name="hint_enter_food">Product</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="product_hint">Product</string>
    <string name="selected_food_type">Selected food type</string>
    <string name="add_new_food">Add</string>
    <string name="search_hint">Find recipe</string>
    <string name="shows_food_type">Shows food type</string>
    <string-array name="food_types">
        <item>Other</item>
        <item>Liquid</item>
        <item>Bread</item>
        <item>Alcohol</item>
        <item>Fruit</item>
        <item>Vegetable</item>
        <item>Grocery</item>
        <item>Fish</item>
        <item>Meat</item>
        <item>Sweet</item>
        <item>Cheese</item>
        <item>Cereals</item>
    </string-array>
</resources>
