<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/add_new_food"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/new_food_title"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_food_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_enter_food"
        android:lines="1"
        app:layout_constraintEnd_toStartOf="@+id/spinner_food_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_food_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="40" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_food_type"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/selected_food_type"
        app:layout_constraintBottom_toBottomOf="@+id/new_food_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_food_text_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>